--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
             </a>
         </div><!--
         --><nav class="header__main__navigation">
-            <ul class="header__navigation__list">
-                <li class="header__navigation__item"><a href="#" class="header__navigation__link">home</a></li>
-                <li class="header__navigation__item"><a href="#" class="header__navigation__link">contact us</a></li>
-            </ul>
-        </nav>
+        <ul class="header__navigation__list">
+            <li class="header__navigation__item"><a href="index.html" class="header__navigation__link">home</a></li>
+            <li class="header__navigation__item"><a href="#" class="header__navigation__link">contact us</a></li>
+        </ul>
+    </nav>
     </div>
 </header>
 
-<div class="container shadow-1">
-    <img class="container__picture" id="apod_img_id">
+<div class="container">
+    <img class="container__picture shadow-1" id="apod_img_id">
 </div>
 <video id="apod_vid_id"></video>
 
