--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 
-<div id="lottie"></div>
+<!--<div id="lottie"></div>-->
 
 <header class="header__navigation">
     <div class="wrap">
@@ -63,23 +63,32 @@
 </section>
 
 <section id="contact">
-    <p class="title">Contact us</p>
-    <div class="name">
-        <label>Your Name</label>
-        <input type="text">
+    <div class="content">
+        <p class="title">Contact us</p>
+        <div class="name">
+            <label>Your Name</label>
+            <input type="text">
+        </div>
+        <div class="email">
+            <label>Your Email</label>
+            <input type="text">
+        </div>
+        <div class="subject">
+            <label>Subject</label>
+            <input type="text">
+        </div>
+        <div class="message">
+            <label>Your Message</label>
+            <textarea rows="10" cols="40"></textarea>
+        </div>
     </div>
-    <div class="email">
-        <label>Your Email</label>
-        <input type="text">
-    </div>
-    <div class="subject">
-        <label>Subject</label>
-        <input type="text">
-    </div>
+</section>
+
+<section id="footer">
 
 </section>
 
-<script src="script/lottie.js"></script>
+<!--<script src="script/lottie.js"></script>-->
 <script src="script/app.js"></script>
 </body>
 </html>
