first page done

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         </div><!--
         --><nav class="header__main__navigation">
         <ul class="header__navigation__list">
-            <li class="header__navigation__item"><a href="index.html" class="header__navigation__link">home</a></li>
-            <li class="header__navigation__item"><a href="#" class="header__navigation__link">nasa</a></li>
+            <li class="header__navigation__item"><a href="https://www.nasa.gov/" target="_blank" class="header__navigation__link">nasa</a></li>
         </ul>
     </nav>
     </div>
@@ -81,11 +80,15 @@
             <label>Your Message</label>
             <textarea rows="10" cols="40"></textarea>
         </div>
+        <div class="sendbutton">
+            <input type="submit" value="Send">
+        </div>
     </div>
 </section>
 
 <section id="footer">
-
+    <p>Picture of The Day -- By Mathieu Bonte</p>
+    <p>© Copyright 2017. All Rights Reserved.</p>
 </section>
 
 <!--<script src="script/lottie.js"></script>-->
