--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 <section id="main">
     <p class="title">Picture of The Day</p>
     <p id="apod__title__mainpage"></p>
-
+    <p id="apod__date"></p>
+    <div class="buttons">
+        <button id="prev" value="prev"> < Prev</button>
+        <button id="next" value="next"> Next > </button>
+    </div>
     <div class="container">
         <img id="apod__img__id" class="shadow-1">
     </div>
