--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
     </div>
 </header>
 
+<section title=".slideThree">
+    <div class="nightmode">
+        <p id="nightMode">Night mode</p>
+        <!-- .slideThree -->
+        <div class="slideThree">
+            <input type="checkbox" value="None" id="slideThree" name="check" onchange="nightMode(body,this)" />
+            <label for="slideThree" id="slideThreeLabel"></label>
+        </div>
+        <!-- end .slideThree -->
+    </div>
+</section>
 <section id="main">
     <p class="title">Picture of The Day</p>
     <p id="apod__title__mainpage"></p>
