--- a/index.html
+++ b/index.html
@@ -15,30 +15,29 @@
 
     <!-- Ajax -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <!-- dateJS -->
+    <script src="script/date.js"></script>
 </head>
 <body>
 
 
-<!--<div id="lottie"></div>-->
+<div id="lottie"></div>
 
 <header class="header__navigation">
     <div class="wrap">
         <div class="header__logo">
-            <a href="#" class="header__logo__link">
+            <a href="https://www.nasa.gov/" target="_blank" class="header__logo__link">
                 <img class="header__logo__link__picture" src="media/nasaLogo-570x450.png">
             </a>
-        </div><!--
-        --><nav class="header__main__navigation">
-        <ul class="header__navigation__list">
-            <li class="header__navigation__item"><a href="https://www.nasa.gov/" target="_blank" class="header__navigation__link">nasa</a></li>
-        </ul>
+        </div>
     </nav>
     </div>
 </header>
 
 <section title=".slideThree">
     <div class="nightmode">
-        <p id="nightMode">Night mode</p>
+        <p id="nightMode">Dark mode</p>
         <!-- .slideThree -->
         <div class="slideThree">
             <input type="checkbox" value="None" id="slideThree" name="check" onchange="nightMode(body,this)" />
@@ -47,6 +46,7 @@
         <!-- end .slideThree -->
     </div>
 </section>
+
 <section id="main">
     <p class="title">Picture of The Day</p>
     <p id="apod__title__mainpage"></p>
@@ -60,7 +60,7 @@
     </div>
 
     <div class="video__container">
-        <iframe id="apod__vid__id"></iframe>
+        <iframe id="apod__vid__id" class="shadow-1"></iframe>
     </div>
 </section>
 
@@ -77,28 +77,30 @@
 </section>
 
 <section id="contact">
-    <div class="content">
-        <p class="title">Contact us</p>
-        <div class="name">
-            <label>Your Name</label>
-            <input type="text">
+    <form method="get">
+        <div class="content">
+            <p class="title">Contact us</p>
+            <div class="name">
+                <label>Your Name</label>
+                <input type="text">
+            </div>
+            <div class="email">
+                <label>Your Email</label>
+                <input type="text">
+            </div>
+            <div class="subject">
+                <label>Subject</label>
+                <input type="text">
+            </div>
+            <div class="message">
+                <label>Your Message</label>
+                <textarea rows="10" cols="40"></textarea>
+            </div>
+            <div class="sendbutton">
+                <input type="submit" value="Send">
+            </div>
         </div>
-        <div class="email">
-            <label>Your Email</label>
-            <input type="text">
-        </div>
-        <div class="subject">
-            <label>Subject</label>
-            <input type="text">
-        </div>
-        <div class="message">
-            <label>Your Message</label>
-            <textarea rows="10" cols="40"></textarea>
-        </div>
-        <div class="sendbutton">
-            <input type="submit" value="Send">
-        </div>
-    </div>
+    </form>
 </section>
 
 <section id="footer">
@@ -106,7 +108,7 @@
     <p>© Copyright 2017. All Rights Reserved.</p>
 </section>
 
-<!--<script src="script/lottie.js"></script>-->
+<script src="script/lottie.js"></script>
 <script src="script/app.js"></script>
 </body>
 </html>
